# ex.tr

./: .gitignore  Cargo.toml  Dockerfile  et.db
.github/: dependabot.yml
.github/workflows/: rust-nightly.yml  rust.yml
migrations/: 20250602224519_init.down.sql  20250602224519_init.up.sql
src/: error.rs  infra.rs  instrument.rs  lib.rs  main.rs
src/controller/: home.rs
src/infra/: template.rs
templates/: layout.html
templates/home/: index.html
